k8s/webapp_1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-1
  template:
    metadata:
      labels:
        app: webapp-1
    spec:
      containers:
        - name: webapp-1
          image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      tolerations:
        - key: "node"
          operator: "Exists"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: color
                    operator: In
                    values:
                      - red
                      - blue
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              preference:
                matchExpressions:
                  - key: node
                    operator: In
                    values:
                      - system
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-1-srv
spec:
  selector:
    app: webapp-1
  type: ClusterIP
  ports:
    - port: 80
