k8s/webapp_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-2
  template:
    metadata:
      labels:
        app: webapp-2
    spec:
      containers:
        - name: webapp-2
          image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-2-srv
spec:
  selector:
    app: webapp-2
  type: ClusterIP
  ports:
    - port: 80
