k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - aksaztfpro02.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: aksaztfpro02.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: webapp-1-srv
                port:
                  number: 80
          - path: /webapp1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: webapp-1-srv
                port:
                  number: 80
          - path: /webapp2(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: webapp-2-srv
                port:
                  number: 80
